--- a/content.tex
+++ b/content.tex
@@ -21,7 +21,7 @@
  \item Разработать методику автоматического агрегирования образовательных данных в системе электронного обучения с использованием методов естественной обработки языка, логического вывода, технологий Semantic Web и Linked Data;
  \item Разработать метод анализа качества и полноты образовательных материалов, основанный на семантических связях в онтологических моделях;
   \item Разработать новый подход к автоматизированной оценке результатов обучения и построению рейтингов студентов системы электронного обучения с использованием статистических методов и семантических технологий;
-  \item Создать программно-аппаратный комплекс системы электронного обучения на основе разработанных методов и проанализировать полученные результаты на практике.  
+  \item Создать программные модули для системы электронного обучения на основе разработанных методов и проанализировать полученные результаты на практике.  
  \end{enumerate}
 
 \textbf{Объектом исследования} является структура и логические отношения между объектами образовательного процесса, предметных областей учебных дисциплин и образовательных ресурсов.  
@@ -76,23 +76,9 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
 \textbf{Первая глава} посвящена ...
 
-%  картинку можно добавить так:
-% \begin{figure}[h] 
-%   \center
-%   \includegraphics [scale=0.27] {latex}
-%   \caption{Подпись к картинке.} 
-%   \label{img:latex}
-% \end{figure}
-
-% Формулы в строку без номера добавляются так:
-% $$
-%   \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-%   \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
-% $$
-
 \textbf{Вторая глава} посвящена исследованию 
 
-\textbf{Третья глава} посвящена разработке онтологической модели для описания учебных материалов и образовательного процесса, исследованию методов автоматического агрегирования образовательных данных и разработке методов и подходов к автоматизированной оценке качества учебных курсов и результатов обучения студентов.   
+\textbf{Третья глава} посвящена разработке онтологической модели для описания учебных материалов и образовательного процесса, исследованию методов автоматического агрегирования образовательных данных и разработке методов и подходов к автоматизированной оценке качества учебных курсов и результатов обучения студентов.  
 
 В результате анализа систем электронного обучения была сформирована общая модель данных в системе. Модель делится на три основных уровня: уровень предметных областей, уровень учебных материалов, уровень деятельности пользователей в системе. Уровни модели связаны друг с другом для обеспечения взаимодействия различных ресурсов системы. Уровень предметных областей является основой модели данных и содержит информацию о предметных областях учебных дисциплин. Сбор данных для этого уровня производится из открытых, опубликованных баз знаний, таксономий и наборов данных. Уровень учебных материалов содержит информацию необходимую для проведения учебного процесса. На данном уровне хранятся данные по образовательным программам, курсам, тестам и медиа-ресурсам. Сбор данных для этого уровня производится из хранилищ университетов, открытых электронных библиотек и медиа-ресурсов. Связывание учебных материалов с предметными терминами и областями производится в полуавтоматическом режиме с использованием алгоритмов обработки естественного языка. Уровень деятельности пользователей в системе содержит результаты обучения студентов и  статистические данные по активности пользователей. Статистика ведется в системе управления обучением LMS(Learning Management System). При ведении статистики используется информация из социальных сетей. Связывание статистики и результатов обучения с учебными материалами происходит в автоматическом режиме алгоритмами LMS. Общая модель данных системы электронного обучения представлена на рисунке \ref{fig:OverallModel}. 
 
@@ -119,7 +105,7 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 % Показать схему онтологии
 % Привести выходные данные
 
-В продолжении главы описывается разработанная методика по агрегации и гармонизации учебных материалов в системе электронного обучения. Технологии Semantic Web и Linked Data позволяют использовать онтологии для хранения, сбора и распространения данных. Одним из преимуществ данных технологий является повторное использование данных. В Интернете существует множество открытых источников с данными, при описании которых были использованы онтологии верхнего уровня. Данные источники могут быть использованы для наполнения системы дистанционного обучения. Для сбора и интеграции данных в системе электронного обучения предлагается использовать провайдеры данных. Провайдеры данных это программные модули  поддерживают автоматическое обновление связных данных из открытых источников, используя определенный алгоритм. Провайдеры позволяют преобразовывать структурированные данных различных форматов в формат RDF. Каждый провайдер обладает своим контекстом для дальнейшего управления собранными данными. В результате исследования был сформирован следующий набор методов агрегации данных:
+В продолжении главы описывается разработанная методика по агрегации и гармонизации учебных материалов в системе электронного обучения. Технологии Semantic Web и Linked Data позволяют использовать онтологии для хранения, сбора и распространения данных. Одним из преимуществ данных технологий является повторное использование данных. В Интернете существует множество открытых источников с данными, при описании которых были использованы онтологии верхнего уровня. Данные источники могут быть использованы для наполнения системы электронного обучения. Для сбора и интеграции данных в системе электронного обучения предлагается использовать провайдеры данных. Провайдеры данных это программные модули  поддерживают автоматическое обновление связных данных из открытых источников, используя определенный алгоритм. Провайдеры позволяют преобразовывать структурированные данных различных форматов в формат RDF. Каждый провайдер обладает своим контекстом для дальнейшего управления собранными данными. В результате исследования был сформирован следующий набор методов агрегации данных:
 
 \begin{itemize}
 \item интеграция связанных данных из открытых источников в формате RDF на примере связывания учебных курсов с данными электронной библиотеки BNB;
@@ -254,7 +240,29 @@ $$
 
 Представленный подход позволяет производить автоматизированную оценку знания студентами предметных областей. Поддержка набора метрик позволяет системе варьировать алгоритмы расчета оценки, добавляя, изменяя и удаляя необходимые метрики. Помимо оценки предметных областей данный подход можно применять к любым объектам образовательного процесса напрямую или косвенно связанным с предметными терминами. Подход позволяет производить оценку учебных курсов и специальностей.  
 
-В \textbf{четвертой главе} приведено описание 
+В \textbf{четвертой главе} приведено описание архитектуры и особенности реализации программных модулей для системы электронного обучения. Также в главе описаны основные результаты исследований по разработанным методикам.
+
+На основе разработанных моделей и методик были реализованы программные модули, которые в своей комбинации формирую ядро системы электронного обучения ECOLE (Enhanced Course Ontology for Linked Education). Сервер системы ECOLE реализован на языке Java и основан на платформе Information Workbench. Платформа Information Workbench предоставляет функционал для работы с открытыми связными данными. Редактирование и управление RDF данными системы реализовано с использованием платформы OpenRDF Sesame. Сервер системы ECOLE предоставляет открытую точку доступа для SPARQL запросов. 
+
+Внешним интерфейсом системы дистанционного обучения ECOLE является система управления образованием Learning Management System (LMS). LMS обладает локальным хранилищем и производит управление пользовательскими данными, настройками и результатами обучения студентов. В LMS реализованы модули для отображения видео-лекций, слайдов, тестов и практических заданий. Внешний интерфейс получает с сервера данные по учебным материалам и отношения между объектами курса с помощью запросов к открытой точке доступа SPARQL. Персональные данные пользователей и настройки LMS хранятся в локальной памяти внешнего интерфейса. С помощью алгоритмов LMS производится сбор статистических данных по действиям студентов в системе и запись их в онтологии на сервере системы. LMS реализована на языке Python с использованием Django Web Framework. Общая архитектура системы электронного обучения ECOLE представлена на рисунке \ref{fig:OverallArch}.
+
+
+\begin{figure}[ht] 
+  \center
+  \includegraphics[scale=0.45]{OverallArch}
+  \caption{Общая архитектура системы электронного обучения ECOLE} 
+  \label{fig:OverallArch}
+\end{figure}
+
+
+После прохождения теста система предоставляет студенту информацию о количестве и доле правильных ответов на задания теста и список предметных терминов для повторения. На основе разработанных методов система расчитывает рейтинг знаний предметных терминов и областей.   
+% Вставить скриншоты рейтинов (список терминов)
+
+
+% Написать про результаты
+% Количество агрегированных объектов
+% Результаты по NLP
+% Результаты по качеству курсов и рейтингам
 
 В \textbf{заключении} приведены основные результаты работы, которые заключаются в следующем:
 \begin{enumerate}
@@ -262,7 +270,7 @@ $$
  \item Разработана методика автоматического агрегирования образовательных данных в системе электронного обучения с использованием методов естественной обработки языка, логического вывода, технологий Semantic Web и Linked Data;
  \item Разработан метод анализа качества и полноты образовательных материалов, основанный на разборе семантических связей между объектами системы;
   \item Разработан новый подход к автоматизированному анализу знаний и рейтингов студентов системы электронного обучения с использованием статистических методов и семантических технологий;
-  \item Создан программно-аппаратный комплекс системы электронного обучения на основе разработанных методов и подходов;
+  \item Созданы программные модули для системы электронного обучения на основе разработанных методов и подходов;
   \item Произведен анализ результатов работы методов и подходов, полученных при прохождении группой студентов учебного курса <<Интеллектуальные системы>>.
   \end{enumerate}
 
