[+] add first part + refs + cleanup

--- a/content.tex
+++ b/content.tex
@@ -13,7 +13,7 @@
 
 Действия студентов в системе электронного обучения могут быть связаны с описанными формально объектами образовательного процесса. Разработка методики анализа деятельности пользователей на основе неявных связей с объектами образовательного процесса позволит преподавателям и авторам курсов получить отклик от студентов. На основе анализа качества, целостности курсов, а так же на основе откликов студентов, авторы курсов и преподаватели могут вносить коррективы в образовательный процесс с целью повышения качества обучения. Аналитическая информация деятельности студентов в системе позволит студентам производить мониторинг процесса обучения.     
 
-\textbf{Целью диссертационной работы} является разработка онтологической модели образовательного ресурса и алгоритмов агрегирования и анализа образовательных данных в системе электронного обучения с использованием семантических технологий. 
+\textbf{Целью диссертационной работы} является исследование и разработка методов агрегирования и анализа образовательных данных в системе электронного обучения с использованием семантических технологий.
 
 Для достижения поставленной цели необходимо было решить следующие \textbf{задачи}:
 \begin{enumerate}
@@ -74,9 +74,28 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 \subsection*{\Large Содержание работы}
 Во \textbf{введении} обосновывается актуальность исследований, проводимых в рамках данной диссертационной работы, приводится обзор научной литературы по изучаемой проблеме, формулируется цель, ставятся задачи работы, сформулированы научная новизна и практическая значимость представляемой работы.
 
-\textbf{Первая глава} посвящена ...
+\textbf{Первая глава} посвящена обзору использования семантических технологий для автоматизации процессов в системах электронного обучения. В главе производится классификация систем электронного обучения и приводится краткая история этапов их развития. На основе анализа отечественных и зарубежных систем электронного обучения и образовательных ресурсов были сформированы имеющиеся проблемы в области дистанционного образования. В данный момент в системах электронного образования отсутствуют механизмы автоматической аггрегации и анализа образовательных данных с использованием открытых образовательных ресурсов. Отсутствие семантического содержания в данных систем электронного образования значительно снижает возможности проведения анализа данных на основе косвенно выводимых фактов.
 
-\textbf{Вторая глава} посвящена исследованию 
+Далее в главе производится анализ иследовательских работ по сформированным проблемам. В главе произодится анализ применения семантических технологий в образовательных системах. Последние исследования показывают что использование семантических технологий и коонцепции связанных данных позволяет автоматизировать наполнение системы определенными данными из открытых источников. Семантические технологии в системе электронного обучения позволяют решить такие проблемы как наполнение системы учебными материалами, поддержка актуальности учебных материалов, оценка качества учебного курса, автоматизация проверки знаний студентов.     
+
+\textbf{Вторая глава} посвящена теоретическим основам онтологий, семантических технологий и технологий Linked Data. В главе раскрываются понятия онтологии, экспертной системы, базы знаний и семантической сети. Так же в главе приводится описание основных стандартов, протоколов и форматов хранения данных в семантических технологиях. В конце главы описаны принципы публикации данных в формате Linked Data.
+
+
+Онтология - термин, заимствованный из философии, который обозначает науку, описывающую формы бытия и то, как они относятся между собой. Иными словами онтология - это явное описание концептуализации. Основными структурными элементами языка онтологий являются понятия класса, индивида и свойства. Онтологии в общем виде определяемые как совместно используемые формальные концептуализации конкретных предметных областей, дают общеее представление о темах, информацией по которым могут обмениваться люди и приложения. Назначением экспертных систем является автоматизация деятельности человека. Ядром экспертной системы является база знаний. База знаний является совокупностью  знаний предметной области, записанной на машинный носитель в форме, понятной эксперту и пользователю.
+
+% подробнее про семантик веб
+Семантическая сеть является  методом представления знаний и позволяет описывать объекты, явления и понятия предметной области с помощью теории графов. Характерной особенностью семантических сетей является обязательное наличие трех типов отношений: класс, свойство и экземпляр класса. Главной целью семантической сети является хранение мировой информации в виде пригодном для машинной обработки. Основной моделью описания данных в семантической сети является модель RDF(Resource Description Framework).  RDF представляет утверждения о ресурсах в виде триплетов. Триплет состоит из субъекта, предиката и объекта. Субъект, объект и предикат определяются с помощью URI. Существует множество форматов представления и хранения данных RDF, таких как XML и N-Triples. Для описания синтаксиса классов объектов используется язык описания онтологий OWL (Ontology Web Language). OWL позволяет явно описывать свойства и классы: наследование классов, характеристики свойств, мощность связей и эквивалентность. Для произведения запросов к семантическим данным используется протокол SPARQL (SPARQL Protocol and RDF Query Language). SPARQL позволяет получать доступ к данным в формате RDF через стандартизированный интерфейс и запрашивать данные с помощью стандартного языка запросов. Организация SPARQL точки доступа к данным позволяет пользователям и приложениям получать данные из базы знаний.
+
+Концепция Linked Data предполагает использование Web-технологий HTTP, RDF, и URI для публикации данных в сети и объединения данных из разных источников. Данная концепция позволяет данным из одного источника ссылаться на данные другого источника. Основными принципами публикации данных с использованием Linked Data являются:
+
+\begin{itemize}
+\item все элементы определяются по средствам URI;
+\item для всех URI возможно их разыменование, по URI возможно получение доступа к элементу;
+\item переход по URI ведет к получению больших данных об элементе;
+\item ссылки на другие источники данных необходимо включать в свои наборы для возможности проведения дальнейшей навигации по данным вне одного ресурса;
+\end{itemize}
+
+В данный момент опубликованные наборы связанных данных охватывают информацию о географических локациях, людях, компаниях, книгах, научных публикациях, фильмах, музыке, телевидении и радио, лекарствах, генах и о многом другом.
 
 \textbf{Третья глава} посвящена разработке онтологической модели для описания учебных материалов и образовательного процесса, исследованию методов автоматического агрегирования образовательных данных и разработке методов и подходов к автоматизированной оценке качества учебных курсов и результатов обучения студентов.  
 
@@ -126,20 +145,7 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
   \label{fig:NLPAlgo}
 \end{figure}
 
-Алгоритм состоит из следующих шагов:
-
-\begin{itemize}
-\item провайдер собирает список заданий курса, используя запросы SPARQL;
-\item производится формирование текстовых данных для каждого задания, используя информацию о вопросах и ответах;
-\item провайдер данных запускает NLP алгоритмы в платформе NooJ для текстовых данных каждого задания;
-\item провайдер формирует список терминов-кандидатов содержащих каноническую форму и набор лемм;
-\item производится поиск предметных терминов в системе с совпадающими наборами лемм для дальнейшего связывания с терминами кандидатами;
-\item провайдер создает связи между найденными предметными терминами системы и заданиями терминов-кандидатов с помощью объектного свойства <<hasTerm>>.
-\end{itemize}
-
-
-% Можно сократить - убрать
-Термины-кандидаты, для которых не были найдены соответствующие предметные термины системы, могут быть записаны в онтологию, как новые предметные термины системы. Перед записью в онтологию провайдер производит проверку термина-кандидата на соответствие предметному термину. Для проверки используются запросы к базе знаний DBpedia. В случае совпадения названия термина-кандидата со свойствами <<rdfs:label>> или <<dbpedia-owl:wikiPageRedirects>> объекта из DBpedia, в онтологии системы создается новый предметный термин на основе термина-кандидата и производится связывание с заданиями теста. При отсутствии совпадений термин-кандидат помечается провайдером данных как ложный термин. При SPARQL запросах к базе знаний DBpedia используется фильтрация по предметным областям и категориям. Данная фильтрация позволяет избежать ошибочных совпадений терминов-кандидатов с терминами из сторонних предметных областей. Для включения нового термина в систему необходима верификация преподавателя или администратора системы. 
+Термины-кандидаты, для которых не были найдены соответствующие предметные термины системы, могут быть записаны в онтологию, как новые предметные термины системы. Перед записью в онтологию провайдер производит проверку термина-кандидата на соответствие предметному термину. Для проверки используются запросы к базе знаний DBpedia. Для включения нового термина в систему необходима верификация преподавателя или администратора системы. 
 
 Далее в главе описывается разработка методов анализа качества и полноты учебного курса. Метод основан на анализе косвенных связей в онтологии системы. Аналитика формируется из статистических данных, полученных с помощью SPARQL запросов. 
 
@@ -185,17 +191,7 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
 В конце главы описывается новый подход к автоматизированному анализу знаний и рейтингов студентов системы электронного обучения с использованием статистических методов и семантических технологий. Данный подход позволяет студентам получать информацию о своих знаниях по предметным терминам и предметным областям учебных дисциплин в режиме реального времени. Такая информация может использоваться студентами для выявления пробелов в знаниях и при повторении пройденных учебных материалов. В дальнейшем развитии подхода информация о знаниях и результатах позволит формировать рекомендации для студентов по образовательным программам и исследовательским проектам и лабораториям. Преподаватели смогут использовать информацию о знаниях и результатах студентов во время подготовки к проведению учебного курса и лекций у определенной группы студентов.
 
-Подход основан на семантическом анализе действий студентов в системе электронного обучения в проекции образовательного процесса и учебных материалов. Целью подхода является автоматизированный вывод рейтинга знаний студентом определенной предметной области учебной дисциплины. Рейтинг знания предметной области зависит от рейтингов входящих в нее предметных терминов. Расчет рейтинга знания предметного термина зависит от метрик оценки действий студента в системе. Набор метрик может варьироваться в зависимости от возможных действий студентов в системе, структуры онтологии и необходимой точности вычислений. В предложенном подходе используются метрики: метрика знакомства с термином и метрика проверки знания термина с помощью тестов. Основными шагами расчета рейтинга знания предметной области являются:
-
-
-\begin{itemize}
-\item расчет рейтинга знания предметного термина с учетом метрики знакомства с термином;
-\item расчет рейтинга знания предметного термина с учетом метрики проверки знания термина с помощью тестов;
-% \item расчет рейтингов знания терминов в контексте прохождения одного теста;
-\item расчет суммарного рейтинга знания предметного термина;
-\item расчет значения предметного термина в образовательном процессе;
-\item расчет рейтинга знаний предметной области с учетом значения предметных терминов в образовательном процессе.
-\end{itemize}
+Подход основан на семантическом анализе действий студентов в системе электронного обучения в проекции образовательного процесса и учебных материалов. Целью подхода является автоматизированный вывод рейтинга знаний студентом определенной предметной области учебной дисциплины. Рейтинг знания предметной области зависит от рейтингов входящих в нее предметных терминов. Расчет рейтинга знания предметного термина зависит от метрик оценки действий студента в системе. Набор метрик может варьироваться в зависимости от возможных действий студентов в системе, структуры онтологии и необходимой точности вычислений. В предложенном подходе используются метрики: метрика знакомства с термином и метрика проверки знания термина с помощью тестов. Расчет рейтинга знаний предметной области производится с учетом значения предметных терминов в образовательном процессе.
 
 Рейтинг знания термина, как и рейтинг знания предметной области, варьируется от 0 до 1. Метрика знакомства с термином является бинарной метрикой и обозначает факт изучения студентом предметного термина с использованием теоретического материала. В разработанном подходе изучением предметного термина является завершение студентом лекции связанной с данным термином в системе электронного обучения. Изучить предметный термин студент может только один раз. В разработанном подходе данная метрика составляет 15\% от общего рейтинга знаний предметного термина.
 
@@ -242,26 +238,54 @@ $$
 
 В \textbf{четвертой главе} приведено описание архитектуры и особенности реализации программных модулей для системы электронного обучения. Также в главе описаны основные результаты исследований по разработанным методикам.
 
-На основе разработанных моделей и методик были реализованы программные модули, которые в своей комбинации формирую ядро системы электронного обучения ECOLE (Enhanced Course Ontology for Linked Education). Сервер системы ECOLE реализован на языке Java и основан на платформе Information Workbench. Платформа Information Workbench предоставляет функционал для работы с открытыми связными данными. Редактирование и управление RDF данными системы реализовано с использованием платформы OpenRDF Sesame. Сервер системы ECOLE предоставляет открытую точку доступа для SPARQL запросов. 
-
-Внешним интерфейсом системы дистанционного обучения ECOLE является система управления образованием Learning Management System (LMS). LMS обладает локальным хранилищем и производит управление пользовательскими данными, настройками и результатами обучения студентов. В LMS реализованы модули для отображения видео-лекций, слайдов, тестов и практических заданий. Внешний интерфейс получает с сервера данные по учебным материалам и отношения между объектами курса с помощью запросов к открытой точке доступа SPARQL. Персональные данные пользователей и настройки LMS хранятся в локальной памяти внешнего интерфейса. С помощью алгоритмов LMS производится сбор статистических данных по действиям студентов в системе и запись их в онтологии на сервере системы. LMS реализована на языке Python с использованием Django Web Framework. Общая архитектура системы электронного обучения ECOLE представлена на рисунке \ref{fig:OverallArch}.
-
-
 \begin{figure}[ht] 
   \center
-  \includegraphics[scale=0.45]{OverallArch}
+  \includegraphics[scale=0.40]{OverallArch}
   \caption{Общая архитектура системы электронного обучения ECOLE} 
   \label{fig:OverallArch}
 \end{figure}
 
 
-После прохождения теста система предоставляет студенту информацию о количестве и доле правильных ответов на задания теста и список предметных терминов для повторения. На основе разработанных методов система расчитывает рейтинг знаний предметных терминов и областей.   
-% Вставить скриншоты рейтинов (список терминов)
+На основе разработанных моделей и методик были реализованы программные модули, которые в своей комбинации формирую ядро системы электронного обучения ECOLE (Enhanced Course Ontology for Linked Education). Сервер системы ECOLE реализован на языке Java и основан на платформе Information Workbench. Платформа Information Workbench предоставляет функционал для работы с открытыми связными данными. Редактирование и управление RDF данными системы реализовано с использованием платформы OpenRDF Sesame. Сервер системы ECOLE предоставляет открытую точку доступа для SPARQL запросов. 
+
+Внешним интерфейсом системы дистанционного обучения ECOLE является система управления образованием Learning Management System (LMS). LMS обладает локальным хранилищем и производит управление пользовательскими данными, настройками и результатами обучения студентов. В LMS реализованы модули для отображения видео-лекций, слайдов, тестов и практических заданий. Внешний интерфейс получает с сервера данные по учебным материалам и отношения между объектами курса с помощью запросов к открытой точке доступа SPARQL. Персональные данные пользователей и настройки LMS хранятся в локальной памяти внешнего интерфейса. С помощью алгоритмов LMS производится сбор статистических данных по действиям студентов в системе и запись их в онтологии на сервере системы. LMS реализована на языке Python с использованием Django Web Framework. Общая архитектура системы электронного обучения ECOLE представлена на рисунке \ref{fig:OverallArch}.
 
 
-% Написать про результаты
-% Количество агрегированных объектов
-% Результаты по NLP
+
+После прохождения теста система предоставляет студенту информацию о количестве и доле правильных ответов на задания теста и список предметных терминов для повторения. На основе разработанных методов система расчитывает рейтинг знаний предметных терминов и областей (Рисунок \ref{fig:screen2}).
+
+\begin{figure}[ht] 
+  \center
+  \includegraphics[scale=0.40]{screen2}
+  \caption {Интерфейс списка предметных областей и терминов с рейтингами знаний в системе ECOLE} 
+  \label{fig:screen2}
+\end{figure}
+
+
+
+Основной набор данных системы дистанционного обучения ECOLE формировался вручную. Часть данных была создана с помощью методов наполнения онтологии описанных в главе 3. Набор данных системы состоит из объектов образовательного процесса, таких как курс, модуль, лекция, тест, практика, предметный термин, предметная область и книга. В результате применения разработнных методов агрегирования, в системе храниться 90 лекций, 587 предметных терминов в 8 предметных областях и 4094 книги и публикации из электронных библиотек.   
+
+Результаты работы алгоритмов обработки естественного языка по извлечению предметных терминов из тестов представлены в таблице \ref{table:2}. С одной стороны с терминами было связано 95\% заданий тестов. С другой стороны более 50\% терминов курса остались не связанными с заданиями тестов. Одной из причин данного явления является косвенное употребление предметных терминов в задании.
+
+\begin{table}[h!]
+\centering
+\caption{Результаты работы алгоритмов обработки естественного языка по извлечению предметных терминов из тестов.)}
+\label{table:2}
+\begin{tabular}{ |p{12cm}|c|  }
+\hline Количество обработанных заданий & 20 \\
+\hline Процент связанных заданий, \% & 95 \\
+\hline Процент несвязанных заданий, \% & 5 \\
+\hline Количество извлеченных терминов-кандидатов & 155 \\
+\hline Количество терминов извлеченных вручную & 30 \\
+\hline Термины системы, совпавшие с терминами-кандидатами, \% & 50 \\
+\hline Термины-кандидаты, совпавшие с терминами системы, \% & 8 \\
+\hline Термины-кандидаты, добавленные в систему после прохождения проверки, \%  & 6 \\
+\hline Ложные термины-кандидаты, \% & 86 \\
+\hline
+\end{tabular}
+\end{table}  
+
+
 % Результаты по качеству курсов и рейтингам
 
 В \textbf{заключении} приведены основные результаты работы, которые заключаются в следующем:
@@ -277,6 +301,12 @@ $$
 
 
 %\newpage
-\renewcommand{\refname}{\Large Публикации автора по теме диссертации}
+
+\subsection*{\Large Научные работы по теме диссертации}
+% \renewcommand{\refname}{Научные работы в изданиях, рекомендованных ВАК:}
+% \nocite{*}
+% \bibliography{biblio}
+
+\renewcommand{\refname}{Другие научные работы:}
 \nocite{*}
 \bibliography{biblio}
