--- a/biblio.bib
+++ b/biblio.bib
@@ -1,15 +1,44 @@
 @ARTICLE{bib1,
-  author = {Фамилия, И.О.},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2012},
-  volume = {1},
-  pages = {100}
+  author = {Козлов, Ф.А.},
+  title = {Организация отказоустойчивой репликации потоковых данных подсистемы транспорта сообщений в архитектуре CORBA при помощи технологии ZEROMQ},
+  journal = {Научно-технический вестник информационных технологий, механики и оптики},
+  year = {2013},
+  volume = {2(84)},
+  pages = {94-97}
 }
 
-@CONFERENCE{bib2,
-  author = {Фамилия, И.О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2012}
+@CONFERENCE{biba1,
+  author = {Parkhimovich O., Mouromtsev D., Kovrigina L., Kozlov F.},
+  title = {Linking E-Learning Ontology Concepts with NLP Algorithms},
+  booktitle = {Proceedings of the 16th Conference of Open Innovations Association FRUCT},
+  year = {2014}
+}
+
+@CONFERENCE{biba2,
+  author = {Kozlov F.},
+  title = {A Tool to Convert Linked Data of E-Learning System to the SCORM Standard},
+  booktitle = {Knowledge Engineering and the Semantic Web},
+  year = {2014}
+}
+
+@CONFERENCE{biba3,
+  author = {Kovriguina L., Mouromtsev D., Kozlov F., Parkhimovich O.},
+  title = {A Combined Method for E-Learning Ontology Population based on NLP and User Activity Analysis},
+  booktitle = {CEUR Workshop Proceedings},
+  year = {2014}
+}
+
+@CONFERENCE{biba4,
+  author = {Mouromtsev D.I., Kozlov F., Parkhimovich O., Zelenina M.S.},
+  title = {Development of an Ontology-Based E-Learning System},
+  booktitle = {Knowledge Engineering and the Semantic Web},
+  year = {2013}
+}
+
+
+@CONFERENCE{biba5,
+  author = {Kolchin M., Kozlov F.},
+  title = {A template-based information extraction from web sites with unstable markup},
+  booktitle = {Semantic Web Evaluation Challenge},
+  year = {2014}
 }
