--- a/content.tex
+++ b/content.tex
@@ -5,7 +5,7 @@
 \textbf{Актуальность темы исследования.}
 Популярность и стремительное развитие систем электронного обучения и платформ для массовых открытых онлайн-курсов MOOC (Massive Open Online Course) в последнее время привели к появлению огромного количества образовательных ресурсов, открытых, но практически никак не связанных между собой. Так крупнейший проект в области MOOC - Coursera насчитывает более 1000 онлайн-курсов, предоставленных более чем 100 университетами и организациями. Другими крупными MOOC порталами являются проекты EdX и Udacity, суммарная аудитория которых превышает 4 миллиона пользователей. В России проект <<ИНТУИТ>> позволяет пользователям бесплатно проходить обучение по образовательным программам, многие из которых касаются информационных технологий. Проект <<ИНТУИТ>> предоставляет пользователям более 800 онлайн-курсов. Проект <<Лекториум>> занимается созданием и размещением открытых учебных курсов в формате видеолекций. Курсы проекта подготовлены ведущими ВУЗами и организациями России. Всего в проекте насчитывается более 4000 часов видеолекций. Отдельный вклад в увеличение количества образовательных ресурсов в сети Интернет внесли электронные библиотеки. Так Британская Библиотека предоставляет информацию о более чем 3,5 миллионах публикаций, книг и монографий в формате открытых данных с помощью проекта BNB (British National Bibliography). 
 
-В области разработки систем обучения и автоматизации образовательных процессов возникает необходимость в сборе, агрегации, гармонизации и повторном использовании учебных материалов различных образовательных ресурсов в контексте одной системы электронного обучения. В настоящее время повторное использование учебных материалов сетевых образовательных ресурсов является одним из наиболее перспективных подходов для разработки систем электронного обучения. Разработка методик агрегации данных позволит создавать распределенные системы электронного обучения использующие учебные материалы из различных образовательных ресурсов университетов, библиотек и организаций.
+В области разработки систем обучения и автоматизации образовательных процессов возникает необходимость в сборе, агрегации, гармонизации и повторном использовании учебных материалов различных образовательных ресурсов в контексте одной системы электронного обучения. В настоящее время повторное использование учебных материалов сетевых образовательных ресурсов является одним из наиболее перспективных подходов для разработки систем электронного обучения. Разработка методик агрегации данных позволит создавать распределенные системы электронного обучения, использующие учебные материалы из различных образовательных ресурсов университетов, библиотек и организаций.
 
 Одним из методов реализации повторного использования учебных материалов в системах электронного обучения является применение семантических технологий. Технологии семантических сетей (Semantic Web) и связанных данных (Linked Data) позволяют системам обмениваться данными в сети с использованием онтологий и уникальных идентификаторов ресурсов URI (Uniform Resource Identifier). Системы, используя данные технологии, могут интегрировать и адаптировать данные из сторонних источников. Семантические технологии широко используются в образовательных ресурсах в большинстве развитых стран. Наиболее известным проектом в области связанных данных является инициатива Linked Universities. Linked Universities является альянсом европейских университетов распространяющих свои данные, программы, курсы и учебные материалы в формате Linked Data. Другим успешным примером использования семантических технологий в системе электронного обучения является Open University. Open University является исследовательским университетом электронного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - система управления обучением, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового учебного курса.
 
@@ -76,12 +76,12 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
 \textbf{Первая глава} посвящена обзору использования семантических технологий для автоматизации процессов в системах электронного обучения. В главе производится классификация систем электронного обучения и приводится краткая история этапов их развития. На основе анализа отечественных и зарубежных систем электронного обучения и образовательных ресурсов были сформированы имеющиеся проблемы в области дистанционного образования. В данный момент в системах электронного образования отсутствуют механизмы автоматической аггрегации и анализа образовательных данных с использованием открытых образовательных ресурсов. Отсутствие семантического содержания в данных систем электронного образования значительно снижает возможности проведения анализа данных на основе косвенно выводимых фактов.
 
-Далее в главе производится анализ иследовательских работ по сформированным проблемам. В главе произодится анализ применения семантических технологий в образовательных системах. Последние исследования показывают что использование семантических технологий и коонцепции связанных данных позволяет автоматизировать наполнение системы определенными данными из открытых источников. Семантические технологии в системе электронного обучения позволяют решить такие проблемы как наполнение системы учебными материалами, поддержка актуальности учебных материалов, оценка качества учебного курса, автоматизация проверки знаний студентов.     
+Далее в главе производится анализ исследовательских работ по сформированным проблемам. В главе производится анализ применения семантических технологий в образовательных системах. Последние исследования показывают, что использование семантических технологий и концепции связанных данных позволяет автоматизировать наполнение системы определенными данными из открытых источников. Семантические технологии в системе электронного обучения позволяют решить такие проблемы как наполнение системы учебными материалами, поддержка актуальности учебных материалов, оценка качества учебного курса, автоматизация проверки знаний студентов.  
 
 \textbf{Вторая глава} посвящена теоретическим основам онтологий, семантических технологий и технологий Linked Data. В главе раскрываются понятия онтологии, экспертной системы, базы знаний и семантической сети. Так же в главе приводится описание основных стандартов, протоколов и форматов хранения данных в семантических технологиях. В конце главы описаны принципы публикации данных в формате Linked Data.
 
 
-Онтология - термин, заимствованный из философии, который обозначает науку, описывающую формы бытия и то, как они относятся между собой. Иными словами онтология - это явное описание концептуализации. Основными структурными элементами языка онтологий являются понятия класса, индивида и свойства. Онтологии в общем виде определяемые как совместно используемые формальные концептуализации конкретных предметных областей, дают общеее представление о темах, информацией по которым могут обмениваться люди и приложения. Назначением экспертных систем является автоматизация деятельности человека. Ядром экспертной системы является база знаний. База знаний является совокупностью  знаний предметной области, записанной на машинный носитель в форме, понятной эксперту и пользователю.
+Онтология - термин, заимствованный из философии, который обозначает науку, описывающую формы бытия и то, как они относятся между собой. Иными словами онтология - это явное описание концептуализации. Основными структурными элементами языка онтологий являются понятия класса, индивида и свойства. Онтологии в общем виде определяемые как совместно используемые формальные концептуализации конкретных предметных областей, дают общее представление о темах, информацией по которым могут обмениваться люди и приложения. Назначением экспертных систем является автоматизация деятельности человека. Ядром экспертной системы является база знаний. База знаний является совокупностью  знаний предметной области, записанной на машинный носитель в форме, понятной эксперту и пользователю.
 
 % подробнее про семантик веб
 Семантическая сеть является  методом представления знаний и позволяет описывать объекты, явления и понятия предметной области с помощью теории графов. Характерной особенностью семантических сетей является обязательное наличие трех типов отношений: класс, свойство и экземпляр класса. Главной целью семантической сети является хранение мировой информации в виде пригодном для машинной обработки. Основной моделью описания данных в семантической сети является модель RDF(Resource Description Framework).  RDF представляет утверждения о ресурсах в виде триплетов. Триплет состоит из субъекта, предиката и объекта. Субъект, объект и предикат определяются с помощью URI. Существует множество форматов представления и хранения данных RDF, таких как XML и N-Triples. Для описания синтаксиса классов объектов используется язык описания онтологий OWL (Ontology Web Language). OWL позволяет явно описывать свойства и классы: наследование классов, характеристики свойств, мощность связей и эквивалентность. Для произведения запросов к семантическим данным используется протокол SPARQL (SPARQL Protocol and RDF Query Language). SPARQL позволяет получать доступ к данным в формате RDF через стандартизированный интерфейс и запрашивать данные с помощью стандартного языка запросов. Организация SPARQL точки доступа к данным позволяет пользователям и приложениям получать данные из базы знаний.
@@ -203,7 +203,7 @@ $$
 
 где \(z_{1-\alpha/2}\) - квантиль от от \(1-\alpha/2\) стандартного нормального распределения, \(p\) - доля правильных ответов, \(n\) - общее количество ответов. 
 
-Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответствии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться в множестве учебных курсов. Связи между терминами описывающие необходимость одного термина для изучения другого позволяют рассчитать важность предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин тем выше значение данного термина. При расчете учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины, зависимые от предметных терминов зависимых от рассматриваемого предметного термина. Значение термина рассчитывается с использованием трех уровней зависимости по формуле: 
+Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответствии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться во множестве учебных курсов. Связи между терминами описывающие необходимость одного термина для изучения другого позволяют рассчитать важность предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин тем выше значение данного термина. При расчете учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины, зависимые от предметных терминов зависимых от рассматриваемого предметного термина. Значение термина рассчитывается с использованием трех уровней зависимости по формуле: 
 
 $$
     W_t = \frac{1}{e}+\sum_{k=1}^{3}\frac{n_k}{e^k}, 
@@ -252,7 +252,7 @@ $$
 
 
 
-После прохождения теста система предоставляет студенту информацию о количестве и доле правильных ответов на задания теста и список предметных терминов для повторения. На основе разработанных методов система расчитывает рейтинг знаний предметных терминов и областей (Рисунок \ref{fig:screen2}).
+После прохождения теста система предоставляет студенту информацию о количестве и доле правильных ответов на задания теста и список предметных терминов для повторения. На основе разработанных методов система рассчитывает рейтинг знаний предметных терминов и областей (Рисунок \ref{fig:screen2}).
 
 \begin{figure}[ht] 
   \center
@@ -263,7 +263,7 @@ $$
 
 
 
-Основной набор данных системы дистанционного обучения ECOLE формировался вручную. Часть данных была создана с помощью методов наполнения онтологии описанных в главе 3. Набор данных системы состоит из объектов образовательного процесса, таких как курс, модуль, лекция, тест, практика, предметный термин, предметная область и книга. В результате применения разработнных методов агрегирования, в системе храниться 90 лекций, 587 предметных терминов в 8 предметных областях и 4094 книги и публикации из электронных библиотек.   
+Основной набор данных системы дистанционного обучения ECOLE формировался вручную. Часть данных была создана с помощью методов наполнения онтологии описанных в главе 3. Набор данных системы состоит из объектов образовательного процесса, таких как курс, модуль, лекция, тест, практика, предметный термин, предметная область и книга. В результате применения разработанных методов агрегирования, в системе храниться 90 лекций, 587 предметных терминов в 8 предметных областях и 4094 книги и публикации из электронных библиотек.   
 
 Результаты работы алгоритмов обработки естественного языка по извлечению предметных терминов из тестов представлены в таблице \ref{table:2}. С одной стороны с терминами было связано 95\% заданий тестов. С другой стороны более 50\% терминов курса остались не связанными с заданиями тестов. Одной из причин данного явления является косвенное употребление предметных терминов в задании.
 
